# ticpic

./: .gitignore  README.md  package-lock.json  package.json
BACKEND/: Contributing.md  app.py  pyproject.toml
BACKEND/flask_api/: __init__.py  config.py  extensions.py  main.db  models.py  routes.py
BACKEND/instance/: main.db
BACKEND/migrations/versions/: 51cd242741c0_initial_migration.py  d334fba090c8_.py
FRONTEND/: Contributing.md  README.md  package-lock.json  package.json
FRONTEND/public/: index.html
FRONTEND/src/: App.vue  main.js
FRONTEND/src/components/: BottomBar.vue  LandingPage.vue  MainPage.vue  NavBar.vue
FRONTEND/src/components/user/: UserLogin.vue  UserSignUp.vue
FRONTEND/src/router/: router.js
FRONTEND/src/services/: event_services.js
FRONTEND/src/store/: store.js
FRONTEND/src/store/modules/: user_auth.js
